--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -5,9 +5,15 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">teacher</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-card *ngFor="let teacher of teachers">
+    <ion-card-header>
+      <ion-thumbnail>
+        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
+      </ion-thumbnail>
+    </ion-card-header>
+    <ion-card-content>
+      <h2>{{teacher.first_name}} {{teacher.last_name}}</h2>
+    </ion-card-content>
+    <ion-button expand="block" fill="clear">Detail</ion-button>
+  </ion-card>
 </ion-content>
