--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -1,19 +1,36 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>teacher</ion-title>
+    <ion-title>Teachers</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">Teachers</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  
+  <!-- Lista de tarjetas -->
+  <div class="card-list">
   <ion-card *ngFor="let teacher of teachers">
-    <ion-card-header>
-      <ion-thumbnail>
-        <img alt="Silhouette of mountains" src="https://ionicframework.com/docs/img/demos/thumbnail.svg" />
-      </ion-thumbnail>
-    </ion-card-header>
-    <ion-card-content>
-      <h2>{{teacher.first_name}} {{teacher.last_name}}</h2>
-    </ion-card-content>
-    <ion-button expand="block" fill="clear">Detail</ion-button>
-  </ion-card>
+    <div class="image-column">
+        <img src="{{teacher.urlImage}}" alt="">
+    </div>
+    <div class="text-column">
+        <ion-card-header>
+            <ion-card-subtitle>{{ teacher.subject }}</ion-card-subtitle>
+            <ion-card-title>{{teacher.first_name}} {{teacher.last_name}}</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            <!-- x cosa -->
+        </ion-card-content>
+    </div>
+    <div class="icon-column">
+        <ion-button fill="clear" shape="round" color="primary">
+            <ion-icon name="information-circle-outline"></ion-icon>
+        </ion-button>
+    </div>
+</ion-card>
+</div>
 </ion-content>
