--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,16 +1,18 @@
-<ion-tabs>
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="teacher">
-      <ion-icon name="person-outline"></ion-icon>
-      Teachers
-    </ion-tab-button>
-    <ion-tab-button tab="vote">
-      <ion-icon name="create-outline"></ion-icon>
-      Votes
-    </ion-tab-button>
-    <ion-tab-button tab="chart">
-      <ion-icon name="stats-chart-outline"></ion-icon>
-      Search
-    </ion-tab-button>
-  </ion-tab-bar>
-</ion-tabs>
+<ion-content [fullscreen]="false">
+  <ion-tabs>
+    <ion-tab-bar slot="bottom">
+      <ion-tab-button tab="teacher">
+        <ion-icon name="person-outline" color="#45BBFF"></ion-icon>
+        Teachers
+      </ion-tab-button>
+      <ion-tab-button tab="vote">
+        <ion-icon name="create-outline"></ion-icon>
+        Votes
+      </ion-tab-button>
+      <ion-tab-button tab="chart">
+        <ion-icon name="stats-chart-outline"></ion-icon>
+        Charts
+      </ion-tab-button>
+    </ion-tab-bar>
+  </ion-tabs>
+</ion-content>
