--- a/src/app/page/login/login.page.html
+++ b/src/app/page/login/login.page.html
@@ -1,10 +1,10 @@
-<ion-content [fullscreen]="false">
+<ion-content [fullscreen]="true">
   <div class="container">
     <ion-grid
       class="ion-padding-horizontal background-opts"
       [ngStyle]="background">
     </ion-grid>
-    <ion-grid class="ion-padding white">
+    <ion-grid class="white">
       <ion-row class="ion-padding-horizontal">
         <ion-col size="9" class="ion-padding-vertical">
           <h1 class="title ion-no-padding ion-no-margin">Sign In</h1>
@@ -15,12 +15,13 @@
           <form [formGroup]="loginForm" (ngSubmit)="signIn()">
             <ion-item lines="none" class="ion-no-padding">
               <ion-label class="input-label" position="stacked"
-                >Email Address</ion-label
+                >Username</ion-label
               >
               <ion-input
-                type="email"
+                type="text"
                 formControlName="email"
-                placeholder="Type your email address"
+                placeholder="Type your username"
+                [ngModel]="email"
               ></ion-input>
             </ion-item>
             <ion-item lines="none" class="ion-no-padding">
@@ -31,6 +32,7 @@
                 type="password"
                 formControlName="password"
                 placeholder="Type your password"
+                [ngModel]="pass"
               ></ion-input>
             </ion-item>
             <div class="ion-padding-vertical">
