--- a/src/app/page/login/login.page.scss
+++ b/src/app/page/login/login.page.scss
@@ -15,7 +15,6 @@
   background-size: cover;
   box-shadow: inset 0 0 0 1000pt rgba(0, 0, 0, 0.3);
   --background: transparent;
-  max-height: 50%;
 }
 
 ion-header ion-toolbar {
@@ -66,7 +65,7 @@ ion-item {
 
 ion-input {
   --background: #f9f9f9;
-  border-radius: 6px;
+  border-radius: 10px;
   --box-shadow: none;
   --placeholder-color: cvar(--ion-color-medium);
   padding: 2px 10px !important;
@@ -98,16 +97,6 @@ ion-input {
   animation: fadeIn 0.5s;
 }
 
-.back-btn {
-  background: rgba(36, 42, 56, 0.4);
-  border-radius: 50%;
-
-  ion-icon {
-    font-size: 24px;
-    color: #ffffff;
-  }
-}
-
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -115,4 +104,18 @@ ion-input {
   100% {
     opacity: 1;
   }
+}
+
+ion-button {
+  --background: #45BBFF;
+  --background-hover: ##45BBFF;
+  --background-activated: ##45BBFF;
+  --background-focused: #45BBFF;
+
+  --color: white;
+
+  --box-shadow: 0 2px 6px 0 rgb(0, 0, 0, 0.25);
+
+  --padding-top: 10px;
+  --padding-bottom: 10px;
 }
