--- a/src/app/page/chart/chart.page.html
+++ b/src/app/page/chart/chart.page.html
@@ -1,13 +1,12 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>chart</ion-title>
+    <ion-button slot="end" fill="clear">
+      <ion-icon slot="icon-only" name="log-out-outline" md="settings-sharp"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">chart</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div [options]="options" class="demo-chart" echarts></div>
 </ion-content>
