--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -28,20 +28,33 @@
         </ion-button>
     </div>
 </ion-card>
-<ion-modal #modalRef [isOpen]="isModalOpen">
-  <ng-template>
-    <ion-header>
-      <ion-toolbar>
-        <ion-title>{{selectedTeacher.first_name}}</ion-title>
-        <ion-buttons slot="end">
-          <ion-button (click)="setOpen(false, null)" color="white">Close</ion-button>
-        </ion-buttons>
-      </ion-toolbar>
-    </ion-header>
-    <ion-content class="ion-padding">
-      {{selectedTeacher.email}}
-    </ion-content>
-  </ng-template>
-</ion-modal>
+  <ion-modal #modalRef [isOpen]="isModalOpen">
+    <ng-template>
+      <ion-header>
+        <ion-toolbar>
+          <ion-title>{{ selectedTeacher.first_name }}</ion-title>
+          <ion-buttons slot="end">
+            <ion-button (click)="setOpen(false, null)" color="white">Close</ion-button>
+          </ion-buttons>
+        </ion-toolbar>
+      </ion-header>
+      <ion-content class="ion-padding">
+        <ion-card id="cardModal">
+          <ion-card-header>
+            <ion-card-subtitle>{{ selectedTeacher.subject }}</ion-card-subtitle>
+            <ion-card-title>{{ selectedTeacher.first_name }} {{ selectedTeacher.last_name }}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <p>Email: {{ selectedTeacher.email }}</p>
+            <p>Phone: {{ selectedTeacher.phone }}</p>
+            <p>Office Location: {{ selectedTeacher.office_location }}</p>
+            <p>Years of Experience: {{ selectedTeacher.years_of_experience }}</p>
+            <p>Degree: {{ selectedTeacher.degree }}</p>
+          </ion-card-content>
+        </ion-card>
+        <ion-button class="btnEnviar" expand="block" color="primary">Evaluar</ion-button>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
 </div>
 </ion-content>
