Page evaluacion, votes

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="person-outline" color="#45BBFF"></ion-icon>
         Teachers
       </ion-tab-button>
-      <ion-tab-button tab="vote">
+      <ion-tab-button tab="votes">
         <ion-icon name="create-outline"></ion-icon>
         Votes
       </ion-tab-button>
