--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -2,16 +2,13 @@
   <ion-tabs>
     <ion-tab-bar slot="bottom">
       <ion-tab-button tab="teacher">
-        <ion-icon name="person-outline" color="#45BBFF"></ion-icon>
-        Teachers
+        <ion-icon name="person-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="votes">
         <ion-icon name="create-outline"></ion-icon>
-        Votes
       </ion-tab-button>
       <ion-tab-button tab="chart">
         <ion-icon name="stats-chart-outline"></ion-icon>
-        Charts
       </ion-tab-button>
     </ion-tab-bar>
   </ion-tabs>
