--- a/src/app/page/evaluacion/evaluacion.page.html
+++ b/src/app/page/evaluacion/evaluacion.page.html
@@ -1,11 +1,14 @@
-<ion-header [translucent]="true">
+<ion-header [translucent]="true" collapse="condense">
   <ion-toolbar>
-    <ion-title>evaluacion</ion-title>
+    <ion-button slot="start" fill="clear" (click)="close()">
+      <ion-icon slot="icon-only" name="chevron-back-outline" md="settings-sharp"></ion-icon>
+    </ion-button>
+    <ion-title>Evaluacion</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header>
     <ion-toolbar>
       <ion-title size="large">evaluacion</ion-title>
     </ion-toolbar>
