--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -1,13 +1,14 @@
-<ion-header [translucent]="true" collapse="condense">
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title size="large">Teachers</ion-title>
-    <ion-button slot="end" fill="clear" (click)="logOut()">
+    <ion-title>Teachers</ion-title>
+    <ion-button slot="end" fill="clear" (click)="logOut()" >
       <ion-icon slot="icon-only" name="log-out-outline" md="settings-sharp"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
+  <ion-nav [root]="componet"></ion-nav>
   <div class="card-list">
   <ion-card *ngFor="let teacher of teachers">
     <div class="image-column">
@@ -52,7 +53,9 @@
             <p>Degree: {{ selectedTeacher.degree }}</p>
           </ion-card-content>
         </ion-card>
-        <ion-button class="btnEnviar" expand="block" color="primary">Evaluar</ion-button>
+        <ion-nav-link routerLink="/evaluacion" [component]="componet">
+          <ion-button class="btnEnviar" expand="full" color="primary" (click)="setOpen(false, null)">Evaluar</ion-button>
+        </ion-nav-link>
       </ion-content>
     </ng-template>
   </ion-modal>
