--- a/src/app/page/evaluacion/evaluacion.page.html
+++ b/src/app/page/evaluacion/evaluacion.page.html
@@ -3,14 +3,31 @@
     <ion-button slot="start" fill="clear" (click)="close()">
       <ion-icon slot="icon-only" name="chevron-back-outline" md="settings-sharp"></ion-icon>
     </ion-button>
-    <ion-title>Evaluacion</ion-title>
+    <ion-title>Teacher Evaluation</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title size="large">evaluacion</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div style="position: relative;">
+    <!-- Imagen -->
+    <img src="https://img.freepik.com/vector-premium/dibujo-dibujos-animados-maestro_29937-8192.jpg" alt="" style="width: 100%; height: auto;">
+  </div>
+  <!-- Iteración sobre las preguntas -->
+  <ion-list>
+    <ion-item *ngFor="let question of questions">
+      <!-- Contenedor con texto -->
+      <div class="container-texto">
+        <p>{{question.question}}</p>
+      </div>
+
+      <!-- Selector de 1 a 5 -->
+<ion-select slot="end" [(ngModel)]="question.rating" cancelText="Cancel" okText="Accept">
+  <ion-select-option value="1">Totally Disagree</ion-select-option>
+  <ion-select-option value="2">Disagree</ion-select-option>
+  <ion-select-option value="3">Neither Agree nor Disagree</ion-select-option>
+  <ion-select-option value="4">Agree</ion-select-option>
+  <ion-select-option value="5">Totally Agree</ion-select-option>
+</ion-select>
+    </ion-item>
+  </ion-list>
 </ion-content>
