fix en card de detalle

--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -48,6 +48,7 @@
           <ion-card-content>
             <p>Email: {{ selectedTeacher.email }}</p>
             <p>Phone: {{ selectedTeacher.phone }}</p>
+            <p>schedules: {{ selectedTeacher.schedules}}</p>
             <p>Office Location: {{ selectedTeacher.office_location }}</p>
             <p>Years of Experience: {{ selectedTeacher.years_of_experience }}</p>
             <p>Degree: {{ selectedTeacher.degree }}</p>
