--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>Teachers</ion-title>
-    <ion-button slot="end" fill="clear" (click)="logOut()" >
-      <ion-icon slot="icon-only" name="log-out-outline" md="settings-sharp"></ion-icon>
+    <ion-button slot="end" fill="clear" (click)="logOut()">
+      <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
@@ -10,55 +10,66 @@
 <ion-content [fullscreen]="true">
   <ion-nav [root]="componet"></ion-nav>
   <div class="card-list">
-  <ion-card *ngFor="let teacher of teachers">
-    <div class="image-column">
+    <ion-card *ngFor="let teacher of teachers">
+      <div class="image-column">
         <img src="{{teacher.urlImage}}" alt="">
-    </div>
-    <div class="text-column">
+      </div>
+      <div class="text-column">
         <ion-card-header>
-            <ion-card-subtitle>{{ teacher.subject }}</ion-card-subtitle>
-            <ion-card-title>{{teacher.first_name}} {{teacher.last_name}}</ion-card-title>
+          <ion-card-title>{{teacher.first_name}} {{teacher.last_name}}</ion-card-title>
+          <ion-card-subtitle>{{ teacher.subject }}</ion-card-subtitle>
         </ion-card-header>
-        <ion-card-content>
-            <!-- x cosa -->
-        </ion-card-content>
-    </div>
-    <div class="icon-column">
-        <ion-button fill="clear" shape="round" color="primary" (click)="setOpen(true, teacher)">
-            <ion-icon name="information-circle-outline"></ion-icon>
+      </div>
+      <div class="icon-column">
+        <ion-button fill="clear" shape="round" (click)="setOpen(true, teacher)">
+          <ion-icon name="information-circle-outline"></ion-icon>
         </ion-button>
-    </div>
-</ion-card>
-  <ion-modal #modalRef [isOpen]="isModalOpen">
-    <ng-template>
-      <ion-header>
-        <ion-toolbar>
-          <ion-title>{{ selectedTeacher.first_name }}</ion-title>
-          <ion-buttons slot="end">
-            <ion-button (click)="setOpen(false, null)" color="white">Close</ion-button>
-          </ion-buttons>
-        </ion-toolbar>
-      </ion-header>
-      <ion-content class="ion-padding">
-        <ion-card id="cardModal">
-          <ion-card-header>
-            <ion-card-subtitle>{{ selectedTeacher.subject }}</ion-card-subtitle>
-            <ion-card-title>{{ selectedTeacher.first_name }} {{ selectedTeacher.last_name }}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            <p>Email: {{ selectedTeacher.email }}</p>
-            <p>Phone: {{ selectedTeacher.phone }}</p>
-            <p>schedules: {{ selectedTeacher.schedules}}</p>
-            <p>Office Location: {{ selectedTeacher.office_location }}</p>
-            <p>Years of Experience: {{ selectedTeacher.years_of_experience }}</p>
-            <p>Degree: {{ selectedTeacher.degree }}</p>
-          </ion-card-content>
-        </ion-card>
-        <ion-nav-link routerLink="/evaluacion" [component]="componet">
-          <ion-button class="btnEnviar" expand="full" color="primary" (click)="setOpen(false, null)">Evaluar</ion-button>
-        </ion-nav-link>
-      </ion-content>
-    </ng-template>
-  </ion-modal>
-</div>
+      </div>
+    </ion-card>
+    <ion-modal #modalRef [isOpen]="isModalOpen">
+      <ng-template>
+        <ion-header>
+          <ion-toolbar>
+            <ion-title>{{ selectedTeacher.first_name}} {{selectedTeacher.last_name}}</ion-title>
+            <ion-buttons slot="end">
+              <ion-button (click)="setOpen(false, null)" color="white">Close</ion-button>
+            </ion-buttons>
+          </ion-toolbar>
+        </ion-header>
+        <ion-content class="ion-padding">
+          <ion-grid>
+            <ion-row>
+              <ion-col class="ion-padding-vertical">
+                <p>Email: {{ selectedTeacher.email }}</p>
+                <p>Phone: {{ selectedTeacher.phone }}</p>
+                <p>schedules: {{ selectedTeacher.schedules}}</p>
+                <p>Office Location: {{ selectedTeacher.office_location }}</p>
+                <p>Years of Experience: {{ selectedTeacher.years_of_experience }}</p>
+                <p>Degree: {{ selectedTeacher.degree }}</p>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+          <!-- <ion-card id="cardModal">
+            <ion-card-header>
+              <ion-card-subtitle>{{ selectedTeacher.subject }}</ion-card-subtitle>
+              <ion-card-title>{{ selectedTeacher.first_name }} {{ selectedTeacher.last_name }}</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <p>Email: {{ selectedTeacher.email }}</p>
+              <p>Phone: {{ selectedTeacher.phone }}</p>
+              <p>schedules: {{ selectedTeacher.schedules}}</p>
+              <p>Office Location: {{ selectedTeacher.office_location }}</p>
+              <p>Years of Experience: {{ selectedTeacher.years_of_experience }}</p>
+              <p>Degree: {{ selectedTeacher.degree }}</p>
+            </ion-card-content>
+          </ion-card> -->
+          <ion-nav-link routerLink="/evaluacion" [component]="componet">
+            <ion-button class="btnEnviar" expand="full" color="primary" (click)="setOpen(false, null)">
+              Evaluar
+            </ion-button>
+          </ion-nav-link>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
+  </div>
 </ion-content>
