--- a/src/app/page/votes/votes.page.html
+++ b/src/app/page/votes/votes.page.html
@@ -1,13 +1,43 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>votes</ion-title>
+    <ion-title>Podium</ion-title>
+    <ion-button slot="end" fill="clear" (click)="logOut()">
+      <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
+    </ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">votes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <!-- Primer lugar -->
+    <ion-row>
+      <ion-col size="12" size-sm="6">
+        <ion-card style="height: 200%;">
+          <ion-card-header>
+            <ion-card-subtitle>{{firstPlace.place}}</ion-card-subtitle>
+            <ion-card-title>{{firstPlace.name}}</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            Score: {{firstPlace.score}}
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+    </ion-row>
+
+    <!-- Segundo y Tercer lugar -->
+    <ion-row class="lower-row">
+      <ion-col size="12" size-sm="6">
+        <div class="podium-container">
+          <div class="podium-item">
+            <span class="podium-number">{{secondPlace.name}}</span>
+            <br>Score: {{secondPlace.score}}
+          </div>
+          <div class="podium-item">
+            <span class="podium-number">{{thirdPlace.name}}</span>
+            <br>Score: {{thirdPlace.score}}
+          </div>
+        </div>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
