--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -64,7 +64,7 @@
             </ion-card-content>
           </ion-card> -->
           <ion-nav-link routerLink="/evaluacion" [component]="componet">
-            <ion-button class="btnEnviar" expand="full" color="primary" (click)="setOpen(false, null)">
+            <ion-button class="btnEnviar" expand="full" color=#45BBFF (click)="setOpen(false, null)">
               Evaluar
             </ion-button>
           </ion-nav-link>
