--- a/src/app/page/chart/chart.page.html
+++ b/src/app/page/chart/chart.page.html
@@ -1,8 +1,8 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>chart</ion-title>
-    <ion-button slot="end" fill="clear">
-      <ion-icon slot="icon-only" name="log-out-outline" md="settings-sharp"></ion-icon>
+    <ion-button slot="end" fill="clear" (click)="logOut()">
+      <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
   </ion-toolbar>
 </ion-header>
