--- a/src/app/page/votes/votes.page.html
+++ b/src/app/page/votes/votes.page.html
@@ -14,7 +14,7 @@
       <ion-col size="12" size-sm="6">
         <ion-card style="height: 220px; border-color: #45BBFF;"> <!-- Tarjeta más larga -->
           <ion-card-header>
-            <ion-card-subtitle>{{firstPlace.place}}</ion-card-subtitle>
+            <ion-card-subtitle>Primer Lugar</ion-card-subtitle>
             <ion-card-title style="color: #45BBFF;">{{firstPlace.name}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
@@ -28,9 +28,9 @@
     <!-- Segundo y Tercer lugar -->
     <ion-row class="lower-row">
       <ion-col size="12" size-sm="6">
-        <ion-card style="height: 170px; "> <!-- Tarjeta menos larga -->
+        <ion-card style="height: 170px;"> <!-- Tarjeta menos larga -->
           <ion-card-header>
-            <ion-card-subtitle>{{secondPlace.place}}</ion-card-subtitle>
+            <ion-card-subtitle>Segundo Lugar</ion-card-subtitle>
             <ion-card-title style="color: #45BBFF;">{{secondPlace.name}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
@@ -39,7 +39,7 @@
         </ion-card>
         <ion-card style="height: 120px;"> <!-- Tarjeta aún más pequeña -->
           <ion-card-header>
-            <ion-card-subtitle>{{thirdPlace.place}}</ion-card-subtitle>
+            <ion-card-subtitle>Tercer Lugar</ion-card-subtitle>
             <ion-card-title style="color: #45BBFF;">{{thirdPlace.name}}</ion-card-title>
           </ion-card-header>
           <ion-card-content>
