--- a/src/app/page/chart/chart.page.html
+++ b/src/app/page/chart/chart.page.html
@@ -1,6 +1,6 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>chart</ion-title>
+    <ion-title>Chart</ion-title>
     <ion-button slot="end" fill="clear" (click)="logOut()">
       <ion-icon slot="icon-only" name="log-out-outline"></ion-icon>
     </ion-button>
