fix de colores en botones

--- a/src/app/page/evaluacion/evaluacion.page.html
+++ b/src/app/page/evaluacion/evaluacion.page.html
@@ -31,5 +31,5 @@
     </ion-item>
   </ion-list>
   <!-- Botón Enviar -->
-  <ion-button expand="block" color="success" (click)="submitEvaluation()">Enviar</ion-button>
+  <ion-button class="btnEnviar" expand="block" (click)="submitEvaluation()">Enviar</ion-button>
 </ion-content>
