--- a/src/app/page/teacher/teacher.page.html
+++ b/src/app/page/teacher/teacher.page.html
@@ -48,7 +48,7 @@
                 <p>Degree: {{ selectedTeacher.degree }}</p>
               </ion-col>
             </ion-row>
-          </ion-grid><ion-button class="btnEnviar" expand="full" color="primary" (click)="navigateToEvaluation(selectedTeacher)">
+          </ion-grid><ion-button class="btnEvaluar" expand="full" (click)="navigateToEvaluation(selectedTeacher)">
             Evaluar
           </ion-button>
         </ion-content>
