--- a/src/app/page/votes/votes.page.html
+++ b/src/app/page/votes/votes.page.html
@@ -12,15 +12,26 @@
     <!-- Primer lugar -->
     <ion-row>
       <ion-col size="12" size-sm="6">
-        <ion-card style="height: 220px; border-color: #45BBFF;"> <!-- Tarjeta más larga -->
+        <ion-card> <!-- Tarjeta menos larga -->
           <ion-card-header>
-            <ion-card-subtitle>Primer Lugar</ion-card-subtitle>
-            <ion-card-title style="color: #45BBFF;">{{firstPlace.name}}</ion-card-title>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="8">
+                  <ion-avatar>
+                    <img [src]="firstPlace.photo" style="max-width: 120%; max-height: 120%;" />
+                  </ion-avatar>
+                </ion-col>
+                <ion-col>
+                  <ion-img src="./../../../assets/icon/primero.png" style="max-width: 80%; max-height: 80%;"></ion-img>
+                  Score: {{firstPlace.score}}
+                </ion-col>
+              </ion-row>
+            </ion-grid>
           </ion-card-header>
           <ion-card-content>
-            Score: {{firstPlace.score}}
+            <ion-card-subtitle>Primer Lugar</ion-card-subtitle>
+            <ion-card-title style="color: #45BBFF;">{{firstPlace.name}}</ion-card-title>
           </ion-card-content>
-          <ion-img slot="end" src="https://media.vogue.mx/photos/5e9f0aef8966aa000859aac6/1:1/w_2264,h_2264,c_limit/como-hacer-el-peinado-de-ariana-grande.jpg"></ion-img>
         </ion-card>
       </ion-col>
     </ion-row>
@@ -28,22 +39,46 @@
     <!-- Segundo y Tercer lugar -->
     <ion-row class="lower-row">
       <ion-col size="12" size-sm="6">
-        <ion-card style="height: 170px;"> <!-- Tarjeta menos larga -->
+        <ion-card> <!-- Tarjeta menos larga -->
           <ion-card-header>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="8">
+                  <ion-avatar>
+                    <img [src]="secondPlace.photo" style="max-width: 120%; max-height: 120%;" />
+                  </ion-avatar>
+                </ion-col>
+                <ion-col>
+                  <ion-img src="./../../../assets/icon/segundo.png" style="max-width: 80%; max-height: 80%;"></ion-img>
+                  Score: {{secondPlace.score}}
+                </ion-col>
+              </ion-row>
+            </ion-grid>
+          </ion-card-header>
+          <ion-card-content>
             <ion-card-subtitle>Segundo Lugar</ion-card-subtitle>
             <ion-card-title style="color: #45BBFF;">{{secondPlace.name}}</ion-card-title>
-          </ion-card-header>
-          <ion-card-content>
-            Score: {{secondPlace.score}}
           </ion-card-content>
         </ion-card>
-        <ion-card style="height: 120px;"> <!-- Tarjeta aún más pequeña -->
+        <ion-card> <!-- Tarjeta menos larga -->
           <ion-card-header>
-            <ion-card-subtitle>Tercer Lugar</ion-card-subtitle>
-            <ion-card-title style="color: #45BBFF;">{{thirdPlace.name}}</ion-card-title>
+            <ion-grid>
+              <ion-row>
+                <ion-col size="8">
+                  <ion-avatar>
+                    <img [src]="thirdPlace.photo" style="max-width: 120%; max-height: 120%;" />
+                  </ion-avatar>
+                </ion-col>
+                <ion-col>
+                  <ion-img src="./../../../assets/icon/tercero.png" style="max-width: 80%; max-height: 80%;"></ion-img>
+                  Score: {{thirdPlace.score}}
+                </ion-col>
+              </ion-row>
+            </ion-grid>
           </ion-card-header>
           <ion-card-content>
-            Score: {{thirdPlace.score}}
+            <ion-card-subtitle>Tercer Lugar</ion-card-subtitle>
+            <ion-card-title style="color: #45BBFF;">{{thirdPlace.name}}</ion-card-title>
           </ion-card-content>
         </ion-card>
       </ion-col>
