--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
         <ion-icon name="person-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="votes">
-        <ion-icon name="create-outline"></ion-icon>
+        <ion-icon name="trophy-outline"></ion-icon>
       </ion-tab-button>
       <ion-tab-button tab="chart">
         <ion-icon name="stats-chart-outline"></ion-icon>
